# robtop

./: .gitignore  BoundaryCondition.cpp  CGALDefinition.h  CMakeLists.txt  Dockerfile  Grid.cpp  Grid.h  LICENSE  README.md  binaryIO.h  config_parser.cpp  config_parser.h  cudaCommon.cuh  environment.yml  example.cpp  gpuVector.cu  gpuVector.cuh  gpuVector.h  gpu_manager_t.cpp  lib.cuh  matlab_utils.cpp  matlab_utils.h  matrix.h  mesh_utils.h  mma_t.cu  mma_t.h  openvdb_wrapper_t.h  optimization.cpp  projection.cpp  projection.cu  projection.h  resource.h  robtop.cpp  snippet.h  templateMatrix.cpp  templateMatrix.h  test_utils.cpp  tictoc.cpp
bench/: run.bat
bench/bunnysmooth/: configAll.json
bench/buste/: configAll.json
bench/chair/1/: config.json  config1.json  config2.json
bench/cube24x24x12/: config1.json
bench/duck/: config6.json
bench/foot/: config2.json
bench/kitten/: config31.json
bench/knot/: config4.json
bench/lbeam/: config1.json
bench/mirbridge/: config2.json
boundary/: BoundaryCondition.h
culib/: cudafunctions.h  gpuVector.cpp  gpuVector.cu  gpuVector.cuh  gpuVector.h  lib.cu  lib.cuh
element/: templateMatrix.cpp  templateMatrix.h
grid/: Grid.cpp  Grid.cu  Grid.h  GridHeat.cu
matlab/: matlab_utils.h
mem/: gpu_manager_t.cpp  gpu_manager_t.cu  gpu_manager_t.h
optimization/: mma_t.cpp  mma_t.cu  mma_t.h  optimization.cpp  optimization.cu  optimization.h  projection.cu
utils/: MeshDefinition.h  dir_utils.cpp  dir_utils.h  mesh_utils.cpp  snippet.cpp  test_utils.cpp  test_utils.cu  test_utils.h  tictoc.h  version.cpp
voxelizer/: thrust_operations.cu  util.h  util_io.cpp  voxelize.cu  voxelize.cuh  voxelize_main.cpp  voxelize_solid.cu  voxelizer.h
